# ota-updater

./: LICENSE
app/: CMakeLists.txt
app/inc/: updater.hpp
app/src/: main.cpp  updater.cpp
driver/fpga_prog/: CMakeLists.txt
driver/fpga_prog/inc/: base_loader.hpp  bitstream_loader.hpp  fpga_manager.hpp  overlay_loader.hpp
driver/fpga_prog/src/: base_loader.cpp  bitstream_loader.cpp  fpga_manager.cpp  overlay_loader.cpp
driver/watchdog/inc/: watchdog.hpp
http-server/: CMakeLists.txt
http-server/inc/: server.hpp
http-server/src/: server.cpp
